--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -14,7 +14,7 @@
         <Grid Background="LightSteelBlue">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10" />
-                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="270" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="10" />
             </Grid.ColumnDefinitions>
@@ -25,12 +25,16 @@
                 <RowDefinition Height="10" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" >
-                <TextBlock Text="Pop." FontSize="18" VerticalAlignment="Center" Margin="5,5" />
-                <TextBlock Text="{Binding SelectedTotalReport.Population, StringFormat='{}{0:0,0}'}" FontSize="18" VerticalAlignment="Center" Margin="5,5" />
+                <TextBlock Text="Pop." FontSize="18" VerticalAlignment="Center" />
+                <TextBlock Text="{Binding SelectedTotalReport.Population, StringFormat='{}{0:0,0}'}" FontSize="18" VerticalAlignment="Center" />
                 <TextBlock Text=" - " FontSize="18" VerticalAlignment="Center" />
-                <TextBlock Text="{Binding SelectedTotalReport.DisplayName}" FontSize="18" VerticalAlignment="Center" Margin="5,5" />
+                <TextBlock Text="{Binding SelectedTotalReport.PctConfirmedPopulation, StringFormat='{}{0:F4}%'}" FontSize="18" VerticalAlignment="Center" />
                 <TextBlock Text=" - " FontSize="18" VerticalAlignment="Center" />
-                <TextBlock Text="{Binding SelectedView.ChartName}" FontSize="18" VerticalAlignment="Center" Margin="5,5"/>
+                <TextBlock Text="{Binding SelectedTotalReport.PctDeathConfirmed, StringFormat='{}{0:F2}%'}" FontSize="18" VerticalAlignment="Center" />
+                <TextBlock Text=" - " FontSize="18" VerticalAlignment="Center" />
+                <TextBlock Text="{Binding SelectedTotalReport.DisplayName}" FontSize="18" VerticalAlignment="Center" />
+                <TextBlock Text=" - " FontSize="18" VerticalAlignment="Center" />
+                <TextBlock Text="{Binding SelectedView.ChartName}" FontSize="18" VerticalAlignment="Center" />
             </StackPanel>
             <Grid  Grid.Row="1" Grid.Column="1" >
                 <Grid.ColumnDefinitions>
