--- a/WpfViewer/Views/MainWindow.xaml
+++ b/WpfViewer/Views/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Viewer"
+        xmlns:uc="clr-namespace:Common.UserControls;assembly=Common"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
@@ -121,30 +122,7 @@
             </Border>
         </Grid>
 
-        <Grid x:Name="MessagPanel" Visibility="{Binding MessagePanelVisibility}">
-            <Grid Background="Black" Opacity="0.5"/>
-            <Border
-                        MinWidth="50" MinHeight="50"
-                        Background="LightCoral" 
-                        BorderBrush="Black" 
-                        BorderThickness="1" 
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
-                <StackPanel>
-                    <StackPanel Width="400" Margin="5,5,5,0">
-                        <TextBox Text="{Binding MessageTitle}" TextWrapping="Wrap" MinHeight="16" Background="LightPink" HorizontalAlignment="Center" />
-                        <TextBox Text="{Binding MessageContent}" IsReadOnly="True" TextWrapping="Wrap" MinHeight="42" Background="LightPink" HorizontalAlignment="Stretch" />
-                    </StackPanel>
-                    <DockPanel Visibility="{Binding MessageConfirmVisibilty}" >
-                        <CheckBox Content="{Binding MessageConfirmContent}" IsChecked="{Binding MessageConfirmChecked}" FontStyle="Italic" FontWeight="Bold" HorizontalAlignment="Center" />
-                    </DockPanel>
-                    <StackPanel Visibility="Visible" Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Button Content="{Binding MessageResponseContent}" Command="{Binding MessageResponseCommand}" IsEnabled="{Binding MessageResponseEnabled}" Width="50" Margin="5,5" />
-                        <Button Content="No" Command="{Binding MessageCancelCommand}" Visibility="{Binding MessageNoVisibility}" Width="50" Margin="5,5" />
-                    </StackPanel>
-                </StackPanel>
-            </Border>
-        </Grid>
+        <uc:MessagePanel Name="MessagePanel" />
 
     </Grid>
 </Window>
